Revert "Dubey | BDSHR-1327 | Running all tests under a single suite IntegrationTestSuite."
This reverts commit 414919d9adfbf0a05700e9ea0311eed73ede7730.